--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,8 +5,9 @@
     <title>Kind</title>
   </head>
   <body>
-    <h1>Kinds</h1>
+    <h1>Meme Generator</h1>
     <div class="">
+      <a href="/">Home</a>
       <a href="/kind">Kind</a>
       <a href="/scenario">Scenario</a>
       <a href="/event">Event</a>
