--- a/views/kind/new.ejs
+++ b/views/kind/new.ejs
@@ -1,5 +1,5 @@
 <h1>Create Kind</h1>
-<form class="" action="/event/create" method="post">
+<form class="" action="/kind/create" method="post">
   <div class="">
     <label>Name</label>
     <input type="text" name="name" value="">
