--- a/views/kind/new.ejs
+++ b/views/kind/new.ejs
@@ -1,14 +1,14 @@
 <h1>Create Kind</h1>
 <form class="" action="/kind/create" method="post">
-  <div class="">
+  <div class="form-group">
     <label>Name</label>
-    <input type="text" name="name" value="">
+    <input class="form-control" type="text" name="name" placeholder="Name your meme...">
   </div>
-  <div class="">
+  <div class="form-group">
     <label>URL</label>
-    <input type="text" name="url" value="">
+    <input class="form-control" type="text" name="url" placeholder="Where can we get this spicy meme?">
   </div>
-  <div class="">
-    <input type="submit" value="Create">
+  <div class="form-group">
+    <input class="btn btn-primary" type="submit" value="Create">
   </div>
 </form>
