--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,15 +3,43 @@
   <head>
     <meta charset="utf-8">
     <title>Kind</title>
+    <link rel="stylesheet" href="/style/bootstrap.min.css">
   </head>
   <body>
-    <h1>Meme Generator</h1>
-    <div class="">
-      <a href="/">Home</a>
-      <a href="/kind">Kind</a>
-      <a href="/scenario">Scenario</a>
-      <a href="/event">Event</a>
+    <nav class="navbar navbar-default navbar-static-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-header" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Meme Generator</a>
+        </div>
+        <div class="collapse navbar-collapse" id="main-header">
+          <ul class="nav navbar-nav">
+            <li>
+              <a href="/">Home</a>
+            </li>
+            <li>
+              <a href="/kind">Kind</a>
+            </li>
+            <li>
+              <a href="/scenario">Scenario</a>
+            </li>
+            <li>
+              <a href="/event">Event</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container-fluid">
+      <%- body %>
     </div>
-    <%- body %>
   </body>
+  <script src="/js/jquery.min.js" charset="utf-8"></script>
+  <script src="/js/bootstrap.min.js" charset="utf-8"></script>
+  <%- script %>
 </html>
