--- a/views/scenario/new.ejs
+++ b/views/scenario/new.ejs
@@ -1,10 +1,10 @@
 <h1>Create Scenario</h1>
 <form class="" action="/scenario/create" method="post">
-  <div class="">
+  <div class="form-group">
     <label>Value</label>
-    <input type="text" name="value" value="">
+    <input class="form-control" type="text" name="value" placeholder="Your spicy scenario here...">
   </div>
-  <div class="">
-    <input type="submit" value="Create">
+  <div class="form-group">
+    <input class="btn btn-primary" type="submit" value="Create">
   </div>
 </form>
