--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,10 @@
-<h1 class="page-header">Build a Meme</h1>
+<h1 class="page-header text-center">Build a Meme</h1>
+<div class="text-center">
+  <p class="lead">Meme URL: <a target="_blank" id="meme-url" href="#">meme/</a></p>
+</div>
+<hr>
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-md-4">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h1 class="panel-title">Scenario</h1>
@@ -12,7 +16,7 @@
       </ul>
     </div>
   </div>
-  <div class="col-md-3">
+  <div class="col-md-4">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h1 class="panel-title">Event</h1>
@@ -24,7 +28,7 @@
       </ul>
     </div>
   </div>
-  <div class="col-md-3">
+  <div class="col-md-4">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h1 class="panel-title">Kind</h1>
@@ -36,11 +40,8 @@
       </ul>
     </div>
   </div>
-  <div class="col-md-3">
-    <h3 class="text-center">Meme URL</h3>
-    <p><a target="_blank" id="meme-url" href="#">meme/</a></p>
-  </div>
 </div>
+
 <script>
   $(document).ready(function() {
 
