--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -1,21 +1,29 @@
-<h1>Create Event</h1>
+<h2 class="page-header">Edit Event</h2>
 <% if(kinds.length != 0) { %>
-  <form class="" action="/event/create" method="post">
-    <div class="form-group">
-      <label>Value</label>
-      <input class="form-control" type="text" name="value" placeholder="Your spicy event here...">
-    </div>
-    <div class="form-group">
-      <label>Kind</label>
-      <select class="form-control" name="kind">
-        <option value="">(None)</option>
-        <% for(var i in kinds) { %>
-          <option value="<%= kinds[i].id %>"><%= kinds[i].name %></option>
-        <% } %>
-      </select>
-    </div>
-    <div class="form-group">
-      <input class="btn btn-primary" type="submit" value="Create">
-    </div>
+  <form class="form-horizontal" action="/event/create" method="post">
+    <fieldset>
+      <div class="form-group">
+        <label class="col-sm-2 control-label">Value</label>
+        <div class="col-sm-10">
+          <input class="form-control" type="text" name="value" placeholder="Your spicy event here...">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-sm-2 control-label">Kind</label>
+        <div class="col-sm-10">
+          <select class="form-control" name="kind">
+            <option value="">(None)</option>
+            <% for(var i in kinds) { %>
+              <option value="<%= kinds[i].id %>"><%= kinds[i].name %></option>
+            <% } %>
+          </select>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <input class="btn btn-primary" type="submit" value="Update">
+        </div>
+      </div>
+    </fieldset>
   </form>
 <% } %>
