--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,19 @@
+<div class="row text-center">
+  <div class="col-md-6">
+    <h1 class="page-header">Spicy Meme</h1>
+    <p class="lead">Random Scenario and Event</p>
+    <div class="row text-center">
+      <button class="btn btn-primary large-button" type="button" onclick="location='/spicymeme'">Spicy Meme!</button>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <h1 class="page-header text-center">Random Meme</h1>
+    <p class="lead">Random Scenario, Event, and Kind</p>
+    <div class="row text-center">
+      <button class="btn btn-primary large-button" type="button" onclick="location='/randommeme'">Random Meme!</button>
+    </div>
+  </div>
+</div>
 <h1 class="page-header text-center">Build a Meme</h1>
 <div class="text-center">
   <p class="lead">Meme URL: <a target="_blank" id="meme-url" href="#">meme/</a></p>
@@ -41,7 +57,13 @@
     </div>
   </div>
 </div>
-
+<style>
+  .large-button {
+    width: 300px;
+    height: 100px;
+    font-size: 2.5em;
+  }
+</style>
 <script>
   $(document).ready(function() {
 
