--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Kind</title>
     <link rel="stylesheet" href="/style/bootstrap.min.css">
+    <%- style %>
   </head>
   <body>
     <nav class="navbar navbar-default navbar-static-top">
@@ -25,13 +26,13 @@
               <a href="/">Home</a>
             </li>
             <li>
-              <a href="/kind">Kind</a>
-            </li>
-            <li>
               <a href="/scenario">Scenario</a>
             </li>
             <li>
               <a href="/event">Event</a>
+            </li>
+            <li>
+              <a href="/kind">Kind</a>
             </li>
           </ul>
         </div>
