Storing Images + more changes
- Images are now stored in mongodb
- Updated View pages
- Create and Update redirect to the document instead of list
- Spicymeme and Randommeme can pass cache parameter
- GUI improvements

--- a/views/event/new.ejs
+++ b/views/event/new.ejs
@@ -1,4 +1,4 @@
-<h2 class="page-header">Edit Event</h2>
+<h2 class="page-header">Create Event</h2>
 <% if(kinds.length != 0) { %>
   <form class="form-horizontal" action="/event/create" method="post">
     <fieldset>
@@ -21,7 +21,7 @@
       </div>
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-          <input class="btn btn-primary" type="submit" value="Update">
+          <input class="btn btn-primary" type="submit" value="Create">
         </div>
       </div>
     </fieldset>
