--- a/views/kind/new.ejs
+++ b/views/kind/new.ejs
@@ -1,14 +1,33 @@
-<h1>Create Kind</h1>
-<form class="" action="/kind/create" method="post">
+<h2 class="page-header">Create Kind</h2>
+<form class="form-horizontal" action="/kind/create" method="post" encType="multipart/form-data">
   <div class="form-group">
-    <label>Name</label>
-    <input class="form-control" type="text" name="name" placeholder="Name your meme...">
+    <label class="col-sm-2 form-label">Name</label>
+    <div class="col-sm-10">
+      <input class="form-control" type="text" name="name" placeholder="Name your meme...">
+    </div>
+  </div>
+  <p class="col-sm-offset-2 help-block text-center">
+    --- Upload via URL or File Upload (URL is default) ---
+  </p>
+  <div class="form-group">
+    <label class="col-sm-2 form-label">URL</label>
+    <div class="col-sm-10">
+      <input class="form-control" type="text" name="url" placeholder="Where can we get this spicy meme?">
+    </div>
   </div>
   <div class="form-group">
-    <label>URL</label>
-    <input class="form-control" type="text" name="url" placeholder="Where can we get this spicy meme?">
+    <label class="col-sm-2 form-label">File</label>
+    <div class="col-sm-10">
+      <div class="fileinput fileinput-new input-group" data-provides="fileinput">
+        <div class="form-control" data-trigger="fileinput"><i class="glyphicon glyphicon-file fileinput-exists"></i> <span class="fileinput-filename"></span></div>
+        <span class="input-group-addon btn btn-default btn-file"><span class="fileinput-new">Select file</span><span class="fileinput-exists">Change</span><input type="file" name="img"></span>
+        <a href="#" class="input-group-addon btn btn-default fileinput-exists" data-dismiss="fileinput">Remove</a>
+      </div>
+    </div>
   </div>
   <div class="form-group">
-    <input class="btn btn-primary" type="submit" value="Create">
+    <div class="col-sm-offset-2 col-sm-10">
+      <input class="btn btn-primary" type="submit" value="Create">
+    </div>
   </div>
 </form>
