--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Kind</title>
+    <title>Meme Generator</title>
     <link rel="stylesheet" href="/style/bootstrap.min.css">
+    <link rel="stylesheet" href="/style/jasny-bootstrap.min.css">
     <%- style %>
   </head>
   <body>
@@ -41,8 +42,9 @@
     <div class="container">
       <%- body %>
     </div>
+    <script src="/js/jquery.min.js" charset="utf-8"></script>
+    <script src="/js/bootstrap.min.js" charset="utf-8"></script>
+    <script src="/js/jasny-bootstrap.min.js" charset="utf-8"></script>
+    <%- script %>
   </body>
-  <script src="/js/jquery.min.js" charset="utf-8"></script>
-  <script src="/js/bootstrap.min.js" charset="utf-8"></script>
-  <%- script %>
 </html>
