--- a/views/nomemes.ejs
+++ b/views/nomemes.ejs
@@ -1,3 +1,3 @@
 <h1>No Memes</h1>
-<p>Sorry dude, we could not find any memes.</p>
+<p>Sorry dude, we could not find any memes. Create at least on Scenario, Event, and Kind.</p>
 <img src="http://i1.kym-cdn.com/entries/icons/original/000/002/830/sad_frog.jpg" alt="" />
